# chronoshealth

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Chronos_Health_Work_Process.docx  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  크로노스헬스_작업절차서.docx
.claude/: settings.json
.claude/agents/: compliance-reviewer.md  docs-curator.md  ml-experimenter.md  solidity-auditor.md  test-writer.md
.claude/commands/: adr.md  audit-prep.md  commit-push-pr.md  lint-fix.md  slice.md  spec.md  typecheck-all.md
.claude/hooks/: pre-commit.sh  pre-edit.sh  session-start.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
apps/admin/: package.json
apps/mobile/: package.json
apps/web/: CLAUDE.md  package.json  tsconfig.json
contracts/: CLAUDE.md  foundry.toml
docs/: work-procedure.txt
docs/adr/: 0000-source-of-truth.md  0001-monorepo-pnpm-turborepo.md  0002-cloud-region-aws-seoul.md  0003-identity-vault-pii-isolation.md  0004-token-chain-polygon.md  0005-coding-standards.md  0006-temporary-subdomain.md  0007-infra-cloudflare-first.md  0008-storage-d1.md  0009-framework-hono-cf-workers.md  0010-auth-simple-signup.md  0011-beta-signup-data-model.md  0012-password-introduction.md  0013-two-step-signup.md  0014-session-cookie-ios-itp.md  0015-member-messaging.md
docs/journal/: 2026-W20.md  2026-W25.md
docs/legal/: privacy-ko-v1.md  terms-en-v1.md  terms-es-v1.md  terms-ja-v1.md  terms-ko-v1.md
docs/research/: build_pdf.py
docs/spec/: avatar-chronos.md  identity.md  leaderboard.md  (+5 more)
ml/: CLAUDE.md  pyproject.toml
(+311 files in other folders)
